Wed, 05 Apr 2006 16:50:40 +0200 <thp@perli.net>
	* Today is the "debian packaging" day - thanks to Peter Hoffmann 
	  for his hard work on getting the "debian/" directory into gPodder
	  and his work on creating packages - here are some fixes to 
	  streamline package generation and installation..
	* setup.py now installs the translation files
	* Updated debian/* files (see seperate debian/changelog)
	* Modified setup.py to generate "right" source pkg (make release)
	* Renamed version in bin/gpodder to "0.7svn", pushed date
	* Renamed manpage from gpodder.man.1 to gpodder.1 (obvious error?!)
	* Updated MANIFEST.in to include the "debian" subfolder
	* Updated Makefile to create "deb" with debuild instead of bdist_deb
	* Do not generate binary gettext files (*.mo) on "make release"
	* Added Makefile target "debclean" to clean up debian-related stuff
	* Fixed several warnings reported by "lintian" for the debian pkg
	* Updated TODO list

Tue, 04 Apr 2006 00:16:28 +0200 <thp@perli.net>
	* New podcast download location (save_dir + md5 of url + ext), 
	  while still supporting "legacy" locations (for already downloaded 
	  episodes)
	* Cleanup of libwget (removed two orphaned functions)
	* Notification on startup when running SVN-based version ("warn user")
	* Updated data/po/de.po (german translation)

Mon, 03 Apr 2006 21:40:39 +0200 <thp@perli.net>
	* Retry adding item to localDB on new download attept when not
	  yet added to localDB (helps when already downloaded "grey" item 
	  in available list doesn't appear in "downloaded" list)
	* Put contents of description into <![CDATA[ ... ]]> in case it 
	  includes HTML (parser chokes on entities like &amp; and also &)
	* Better threading, shouldn't fuck up GUI responsiveness after 
	  download has finished (also gives us realtime "downloading" 
	  status updates - yeah, I've now read the pygtk threading faq..)
	* Catch exception when wget's URL contains a % sign and the 