@@ -1,7 +1,6 @@
 
   == 0.7 or afterwards ==
  
- * add i18n files to installed data
  * do more translations (you can contribute here, of course :)
  
  * viewing pod info such as pubdate/description
