@@ -12,16 +12,13 @@
   *) edit the "data/po/XX.po" file (translate the strings)
   *) run "make generators" again
   *) run "make test" to see if it works
+  *) add your language to the languages list in setup.py
 
   report any problems/bugs to: gpodder-devel@berlios.de
-  
-  KNOWN BUGS:
-  *) installation of locale files when doing
-     a "make install" not working
-  *) has had only minimal testing - there might be bugs..
 
 
    -- thp <thp@perli.net>, Thu, 30 Mar 2006 23:16:20 +0200
                   Updated: Fri, 31 Mar 2006 18:11:41 +0200
+                  Updated: Wed, 05 Apr 2006 20:13:07 +0200
 
 
