@@ -2,7 +2,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Wed Apr  5 16:33:16 2006
+# Generated on Wed Apr  5 21:03:09 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -703,8 +703,10 @@ class Gpodderproperties(SimpleGladeApp):
         self.httpProxy.set_text( gl.http_proxy)
         self.ftpProxy.set_text( gl.ftp_proxy)
         self.openApp.set_text( gl.open_app)
+        # the use proxy env vars check box
+        self.cbEnvironmentVariables.set_active( gl.proxy_use_environment)
         # if the symlink exists, set the checkbox active
-        self.cbDesktopSymlink.set_active( gPodderLib().getDesktopSymlink())
+        self.cbDesktopSymlink.set_active( gl.getDesktopSymlink())
         # setup cell renderers
         cellrenderer = gtk.CellRendererPixbuf()
         self.comboPlayerApp.pack_start( cellrenderer, False)
@@ -764,6 +766,15 @@ class Gpodderproperties(SimpleGladeApp):
             self.labelCustomCommand.hide()
     #-- Gpodderproperties.on_comboPlayerApp_changed }
 
+    #-- Gpodderproperties.on_cbEnvironmentVariables_toggled {
+    def on_cbEnvironmentVariables_toggled(self, widget, *args):
+        if libgpodder.isDebugging():
+            print "on_cbEnvironmentVariables_toggled called with self.%s" % widget.get_name()
+        sens = not self.cbEnvironmentVariables.get_active()
+        self.httpProxy.set_sensitive( sens)
+        self.ftpProxy.set_sensitive( sens)
+    #-- Gpodderproperties.on_cbEnvironmentVariables_toggled }
+
     #-- Gpodderproperties.on_btnOK_clicked {
     def on_btnOK_clicked(self, widget, *args):
         if libgpodder.isDebugging():
@@ -772,6 +783,7 @@ class Gpodderproperties(SimpleGladeApp):
         gl.http_proxy = self.httpProxy.get_text()
         gl.ftp_proxy = self.ftpProxy.get_text()
         gl.open_app = self.openApp.get_text()
+        gl.proxy_use_environment = self.cbEnvironmentVariables.get_active()
         gl.propertiesChanged()
         # create or remove symlink to download dir on desktop
         if self.cbDesktopSymlink.get_active():
