@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Wed Apr  5 16:33:16 2006
+# Generated on Wed Apr  5 21:03:09 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -196,6 +196,11 @@ class Gpodderproperties(SimpleGladeApp):
     def on_comboPlayerApp_changed(self, widget, *args):
         print "on_comboPlayerApp_changed called with self.%s" % widget.get_name()
     #-- Gpodderproperties.on_comboPlayerApp_changed }
+
+    #-- Gpodderproperties.on_cbEnvironmentVariables_toggled {
+    def on_cbEnvironmentVariables_toggled(self, widget, *args):
+        print "on_cbEnvironmentVariables_toggled called with self.%s" % widget.get_name()
+    #-- Gpodderproperties.on_cbEnvironmentVariables_toggled }
 
     #-- Gpodderproperties.on_btnOK_clicked {
     def on_btnOK_clicked(self, widget, *args):
