@@ -1,3 +1,9 @@
+Wed, 05 Apr 2006 21:04:10 +0200 <thp@perli.net>
+	* Migrated to new config file style, retaining import support for old
+	* Using Python's ConfigParser to read/write ini-style config file
+	* Added option to properties + config to use environment's proxy
+	* Made gPodderLib a quasi-singleton (only load config once, etc..)
+
 Wed, 05 Apr 2006 16:50:40 +0200 <thp@perli.net>
 	* Today is the "debian packaging" day - thanks to Peter Hoffmann 
 	  for his hard work on getting the "debian/" directory into gPodder
